# cropi-backend

./: .env.exemple  .gitignore  Cargo.toml  README.md  text.txt
app/: Cargo.toml
app/src/: main.rs
app/src/handlers/: health.rs  login.rs  mod.rs  plantations.rs  user.rs
app/src/jobs/: mod.rs  send_ocurrence_notification.rs
app/src/middleware/: auth.rs  ensure_json.rs  mod.rs
app/src/models/: culture.rs  mod.rs  pathogenic.rs  plantation.rs  plantation_pathogenic_occurrences.rs  stations.rs  user.rs
app/src/utils/: database.rs  jwt.rs  mod.rs  request_error.rs  response.rs
crawler/: Cargo.toml
crawler/src/: client.rs  main.rs
crawler/src/handlers/: climate_data.rs  inmet_stations.rs  inmet_temperature_data.rs  mod.rs  ocurrence_inmet_ocorrence_data.rs  ocurrence_inmet_probability.rs
crawler/src/scrapers/: inmet_station_data.rs  mod.rs
crawler/src/utils/: google_jwt.rs  mod.rs
migrations/: 20230803002830_user.sql  20230807213736_create_stations_table.sql  20230815212051_create_culture_table.sql  20230815212310_create_pathogenic_table.sql  20230815213313_create_plantation_table.sql  20231006005142_add_notification_user_token.sql.sql
src/: main.rs
src/handlers/: hello.rs  mod.rs
