[package]
name = "cropi-beckend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poem = { version = "1.3.57" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
serde_json = "1.0.103"
serde = { version = "1.0.175", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
