[workspace]
members = ["app", "crawler"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dotenv = "0.15.0"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1"}
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
uuid = { version = "1.4.1", features = ["v4", "v7", "serde"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
geo ={ version = "0.26.0", features = ["use-serde"]}