[package]
name = "app"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "app"

[dependencies]
dotenv.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true

poem = { version = "1.3" }
garde = { version = "0.14", features = ["derive", "pattern"] }
bcrypt = "0.15"
jsonwebtoken = "8"