[package]
name = "crawler"
version.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
dotenv.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

fantoccini = { version = "0.20.0-rc.4" }
scraper = { version = "0.17.1" }
clap = { version = "4.3.19", features = ["derive"] }
ua_generator = "0.3.5"
